--- a/css/all.css
+++ b/css/all.css
@@ -36,7 +36,9 @@ input[type=image]{
 	padding:0;
 	border:0;
 }
-input[type=text], input[type=password], input[type=file], input[type=submit], textarea{-webkit-appearance:none;}
+input[type=text], input[type=password], input[type=file], input[type=submit], textarea
+{
+	-webkit-appearance:none;}
 header, footer, article, section, nav, figure, aside { display:block; }
 figure{
 	margin:0;
@@ -47,7 +49,7 @@ figure{
 }
 #header{
 	background:#16a085;
-	padding:0 0 38px;
+	padding:0 0 18px;
 }
 #header>.holder:after{
 	content:'';
@@ -83,7 +85,7 @@ figure{
 	float:right;
 	font:26px/30px Arial, Helvetica, sans-serif;
 	text-align:center;
-	padding:0 48px 0 0;
+	padding:0 0 0 0;
 }
 #nav a{
 	float:left;
@@ -919,3 +921,171 @@ background:url(../images/ico05.png) no-repeat 14px 0;
 .floatclear{
 	clear: both;
 }
+
+#loginform{
+	-- padding: 20px;
+
+}
+#loginform input[type="text"]{
+	border: 1px solid #cccccc;
+	width: 314px;
+	height: 25px;
+	margin-bottom: 3px;
+}
+#loginform input[type="password"]{
+	border: 1px solid #cccccc;
+	width: 314px;
+	height: 25px;
+}
+#loginform legend{
+	border-bottom: 1px solid white;
+}
+
+#registerform{
+	padding: 20px;
+}
+#registerform input[type="text"]{
+	border: 1px solid #cccccc;
+	width: 314px;
+	height: 25px;
+	margin-bottom: 3px;
+}
+#registerform input[type="password"]{
+	border: 1px solid #cccccc;
+	width: 314px;
+	height: 25px;
+}
+#registerform legend{
+	border-bottom: 1px solid white;
+}
+#registerform .btn-large{
+	margin: 70px 0 0px 0;
+}
+
+.modal-dialog {
+	right: auto;
+	left: 50%;
+	width: 400px;
+	padding-top: 60px;
+	padding-bottom: 30px;
+}
+
+.modal-dialog .btn, .btn:active {
+	background-color: #39b3d7;
+}
+
+.progress {
+height: 20px;
+margin-bottom: 20px;
+overflow: hidden;
+background-color: #f5f5f5;
+border-radius: 4px;
+-webkit-box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+box-shadow: inset 0 1px 2px rgba(0,0,0,0.1);
+}
+
+.progress-bar {
+float: none;
+width: auto;
+height: 100%;
+font-size: 12px;
+color: #fff;
+text-align: center;
+background-color: #428bca;
+-webkit-box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+box-shadow: inset 0 -1px 0 rgba(0,0,0,0.15);
+-webkit-transition: width .6s ease;
+transition: width .6s ease;
+}
+
+/* ==========================================================================
+   FLIP
+   ========================================================================== */
+
+   .flip-container {
+   	float: left;
+
+   	-- position: relative;
+   	-- -webkit-perspective: 600px;
+   	-- -moz-perspective: 600px;
+   }
+
+   .flip-container .front {
+   	float: none;
+   	position: absolute;
+   	z-index: 900;
+   	background: #ffffff;
+   	width: 354px;
+   	height: 264px;
+   	-webkit-transform: rotateX(0deg) rotateY(0deg);
+   	-webkit-transform-style: preserve-3d;
+   	-webkit-backface-visibility: hidden;
+   	-moz-transform: rotateX(0deg) rotateY(0deg);
+   	-moz-transform-style: preserve-3d;
+   	-moz-backface-visibility: hidden;
+   	/* -- transition is the magic sauce for animation -- */
+   	-o-transition: all .4s ease-in-out;
+   	-ms-transition: all .4s ease-in-out;
+   	-moz-transition: all .4s ease-in-out;
+   	-webkit-transition: all .4s ease-in-out;
+   	transition: all .4s ease-in-out;
+   }
+
+   .flip-container.flip .front {
+   	z-index: 900;
+   	-webkit-transform: rotateY(180deg);
+   	-moz-transform: rotateY(180deg);
+   	-moz-box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   	-webkit-box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   	box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   }
+
+   .flip-container .back {
+   	z-index: 800;
+   	padding: 20px;
+   	width: 354px;
+   	height: 264px;
+   	background: #ffffff;
+   	-webkit-transform: rotateY(-180deg);
+   	-webkit-transform-style: preserve-3d;
+   	-webkit-backface-visibility: hidden;
+   	-moz-transform: rotateY(-180deg);
+   	-moz-transform-style: preserve-3d;
+   	-moz-backface-visibility: hidden;
+   	/* -- transition is the magic sauce for animation -- */
+   	-o-transition: all .4s ease-in-out;
+   	-ms-transition: all .4s ease-in-out;
+   	-moz-transition: all .4s ease-in-out;
+   	-webkit-transition: all .4s ease-in-out;
+   	transition: all .4s ease-in-out;
+   }
+
+   .flip-container.flip .back {
+   	z-index: 1000;
+   	--background: #80868d;
+   	-webkit-transform: rotateX(0deg) rotateY(0deg);
+   	-moz-transform: rotateX(0deg) rotateY(0deg);
+   	box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   	-moz-box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   	-webkit-box-shadow: 0 15px 50px rgba(0,0,0,0.2);
+   }
+
+   /* -- X axis rotation for click panel -- */
+   .click .front {
+   	cursor: pointer;
+   	-webkit-transform: rotateX(0deg);
+   	-moz-transform: rotateX(0deg);
+   }
+   .click.flip .front {
+   	-webkit-transform: rotateX(180deg);
+   	-moz-transform: rotateX(180deg);
+   }
+   .click .back {
+   	cursor: pointer;
+   	-webkit-transform: rotateX(-180deg);
+   	-moz-transform: rotateX(-180deg);
+   }
+   .click.flip .back {
+   	-webkit-transform: rotateX(0deg);
+   	-moz-transform: rotateX(0deg);
+   }
