--- a/css/all.css
+++ b/css/all.css
@@ -255,7 +255,7 @@ figure{
 	margin-top: -100px;
 	margin-bottom: -70px;
 }
-.gray .text-holder .btn{display:inline-block;}
+.gray .text-holder .btn{display:inline-block; padding: 0 30px}
 .section.contact{background:#6b6969 url(../images/bg-contact.jpg) no-repeat 50% 0;}
 .contact>.holder:after{
 	content:'';
