--- a/css/all.css
+++ b/css/all.css
@@ -61,12 +61,12 @@ figure{
 }
 #header>.holder>.frame{
 	overflow:hidden;
-	width:1170px;
+	-- width:1170px;
 	padding:20px 86px 32px 98px;
 	border-bottom:1px solid #44cab8;
 	-webkit-box-shadow:inset 0 -1px 0 #026445;
 	box-shadow:inset 0 -1px 0 #026445;
-	margin:0 auto;
+	margin:0 auto 0 40px;
 }
 #header .logo{
 	overflow:hidden;
@@ -93,9 +93,10 @@ figure{
 	width:105px;
 	padding:66px 5px 9px;
 	text-decoration:none;
-	margin:0 0 0 18px;
+	margin:0 0 0 8px;
 }
 #nav .home{background:url(../images/sprite.png) no-repeat 36px 16px;}
+#nav .logout{background:url(../images/sprite.png) no-repeat 36px 16px;}
 #nav .results{background:url(../images/sprite.png) no-repeat -91px 16px;}
 #nav .courses{background:url(../images/sprite.png) no-repeat -224px 16px;}
 #nav .skills{background:url(../images/sprite.png) no-repeat -327px 16px;}
