Padding for login

--- a/css/all.css
+++ b/css/all.css
@@ -1025,6 +1025,7 @@ height: auto;
    }
 
    .flip-container .front {
+   	padding: 20px;
    	float: none;
    	position: absolute;
    	z-index: 900;
